cloudprojekt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: cloudprojekt
  name: cloudprojekt
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudprojekt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudprojekt    
    spec:
      containers:
      - image: cntmodul/cloudprojekt
        imagePullPolicy: Always
        name: cloudprojekt
