cloudprojekt-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: cloudprojekt
  name: cloudprojekt
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: cloudprojekt
  type: LoadBalancer
